# pytaca

./: pyproject.toml  pytaca_1.glade  sinais.txt
pytaca/: __main__.py  add_obj_window.glade  application_window.glade  control.py  modification_dialog.glade  obj_right_click_menu.glade  shapes.py
